# pfb-imaging

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rayignore  .readthedocs.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  cliff.toml  docs-requirements.txt  exponential.py  image_convolver.py  index.html  make_dirty.py  mkdocs.yml  operators.py  opt.py  pfb.py  pfb_freq_chunked.py  power_beam_maker.py  prep_data.py  pyproject.toml  requirements.txt  reweight_l2.py  scratch.py  setup.py  simple_spi_fitter.py  sitemap.xml  solve_x0.py  solve_x0_exp.py  tbump.toml  utils.py
.claude/rules/: architecture.md  python-standards.md  testing-and-ci.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish-container.yml  publish.yml  update-cabs.yml
api/: index.html
cabs/: __init__.py
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: LOGGING_MIGRATION.md  changelog.md  conf.py  configuration.md  contributing.md  index.md  index.rst  installation.md  look-ahead.md  modules.rst  msv4-memory-patterns.md  msv4-review-request.md  pfb.operators.rst  pfb.opt.rst  pfb.rst  pfb.test.rst  pfb.utils.rst  pfb.wavelets.rst  quickstart.md  requirements.txt
docs/api/: index.md
docs/examples/: benchmarks.md
docs/includes/: mkdocs.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-05-26-hci-inject-transients-test.md  2026-06-04-imager-datatree.md  2026-06-15-remove-arcae-casacore-guardrails.md  2026-06-24-imager-concat-row.md  2026-07-06-gendeconv-protocols.md  2026-07-12-weight-data-radiomesh.md
docs/superpowers/specs/: 2026-04-18-super-uniform-weighting-design.md  2026-05-26-hci-inject-transients-test-design.md  2026-06-04-imager-datatree-design.md  (+3 more)
docs/theory/: index.md
docs/wiki/: deconv-primer.md  design-decisions.md  image-and-beam-orientation.md  imager-pipeline.md  index.md  memory-and-ray.md
examples/: 30Dor.yaml  README.md  SGRA.yml  SGRA_L1.yml  SGRA_L21.yml  SGRA_via_imager_and_deconv.yml  dirty_via_imager.yml  dirty_via_init_and_grid.yml  transient_astrometry_repro.yml
examples/benchmarks/: index.html
includes/mkdocs/: index.html
installation/: index.html
javascripts/: mathjax.js
pfb/: __init__.py  operators.py  opt.py  pfb.py  pfb_freq_chunked.py  pfbclean.py  sara.py  stimela_cabs.yaml  test_pfb.py  utils.py
pfb/deconv/: BaseDeconv.py  __init__.py  agroclean.py  clark.py  clean.py  hogbom.py  nnls.py  sara.py  skoon.py  spotless.py
pfb/operators/: __init__.py  dirac.py  energy.py  fft.py  gauss.py  gridder.py  hessian.py  mask.py  operators.py  psf.py  psi.py  psi2.py  theta.py
pfb/opt/: __init__.py  fista.py  forward_backward.py  hogbom.py  ista_fb.py  opt.py  pcg.py  power_method.py  primal_dual.py
pfb/parser/: __init__.py  airi.yaml  argparser.py  backward.yaml  binterp.yaml  bsmooth.yaml  cgopts.yml  clean.yaml  default_config.yaml  degrid.yaml  delay_init.yaml  dist.yaml  dist.yml  fastim.yaml  fits.yml  fledges.yaml  fluxmop.yaml  fluxtractor.yaml  forward.yaml  fwdbwd.yaml  gainspector.yaml  grid.yaml  gridding.yml  gsmooth.yaml  hard_threshold.yaml  hci.yaml  hthresh.yaml  ift2qc.yaml  imit.yaml  imweight.yaml  init.yaml  kclean.yaml  klean.yaml  ksmooth.yaml  model2comps.yaml  out.yml  pdopts.yml  pmopts.yml  restimator.yaml  restore.yaml  (+9 more)
pfb/prox/: __init__.py  prox2.py  prox_21.py  prox_21m.py  prox_airi.py
pfb/scheduling/: __init__.py
pfb/test/: test_convolve.py  test_convolve2gaussres.py  test_dirac.py  test_kron_matvec.py  test_pfb.py  test_prior.py  test_psi_operator.py  test_residual.py  test_theta.py  test_wavelets.py
pfb/utils/: __init__.py  astrometry.py  beam.py  correlations.py  dist.py  fits.py  interpolation.py  logging.py  misc.py  modelspec.py  naming.py  regression.py  restoration.py  spi.py  stokes.py  stokes2im.py  stokes2vis.py  symbolic.py  transients.py  utils.py  weighting.py
pfb/wavelets/: __init__.py  coefficients.py  common.py  convolution.py  intrinsics.py  modes.py  utils.py  wavelets.py  wavelets_jsk.py
pfb/workers/: README.rst  airi.py  backward.py  clean.py  degrid.py  experimental.py  fastim.py  fluxmop.py  fluxtractor.py  forward.py  fwdbwd.py  grid.py  hci.py  imit.py  init.py  ista.py  kclean.py  klean.py  main.py  model2comps.py  newalgo.py  residual.py  restore.py  sara.py  smoovie.py  spotless.py  taivas.py
quickstart/: index.html
recipes/: dirty_from_ift.yaml  kclean.yml  sara.yml  spotless.yaml
scripts/: check_injected_transients.py  check_katpoint_uvw.py  deconv_qa.py  flag_outliers.py  generate_cabs.py  genfuncs.sh  image_convolver.py  kgb2col.py  make_dirty.py  make_mask.py  meerklass_mosaic.py  multi_pfbclean.py  pfbclean.py  power_beam_maker.py  profile_dwt2d.py  profile_dwt_convolutions.py  profile_pcg.py  profile_polyphase.py  profile_power_method.py  profile_primal_dual.py  profile_wavelets.py  profiling.md  scratch.py  simple_spi_fitter.py  solve_x0.py  spi_fitter.py  ssclean.py
scripts/test/: test_pfbclean.py
search/: search_index.json
src/pfb_imaging/: __init__.py  _container_image.py  stimela_cabs.yml
testing/: __init__.py  gen_ref_data.py  run_tests.py  test_fista.py  test_sara.py
tests/: conftest.py  test_band_actor.py  test_beam.py  test_beam2obj.py  test_beam_orientation.py  test_beaminmodel.py  test_clean.py  test_convolve.py  test_convolve2gaussres.py  test_coords.py  test_deconv.py  test_delay_init.py  test_fits_tree.py  test_forward_backward.py  test_forwardmodel.py  test_fwdbwd.py  test_gainsinmodel.py  test_hci.py  test_hci.yml  test_hess_tree_ray.py  test_hessian.py  test_hessian_approx.py  test_hessian_nterm.py  test_hessian_tree.py  test_imager.py  test_imager_pass2.py  test_imager_pol.py  test_init_ray.py  test_kclean.py  test_klean.py  test_kron_matvec.py  test_model2comps.py  test_numba_cache_dir.py  test_pcg_solver.py  test_pfb_solver.py  test_pfbclean.py  test_polproducts.py  test_preconditioner_consistency.py  test_primal_dual.py  test_protocols.py  (+14 more)
theory/: index.html
(+194 files in other folders)
