[tool.poetry]
name = "pfb-imaging"
version = "0.0.6"
description = "Radio interferometric imaging suite based on a preconditioned forward-backward approach"
authors = ["Landman Bester <lbester@sarao.ac.za>"]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"
]
packages = [{include = "pfb", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pytest = ">=8.0.0"
scikit-image = ">=0.24.0"
PyWavelets = ">=1.7.0"
katbeam = ">=0.1"
numexpr = ">=2.10.1"
Click = ">=8.1"
ducc0 = ">=0.35.0"
sympy = ">=1.9"
stimela = ">=2.0.2"
streamjoy = ">=0.0.8"
codex-africanus = {git = "https://github.com/ratt-ru/codex-africanus.git", extras = ["dask", "scipy", "astropy", "python-casacore"], branch = "master"}
dask-ms = {extras = ["s3", "xarray", "zarr"], version = ">=0.2.23"}
tbb = ">=2021.13.1"
jax = {extras = ["cpu"], version = ">=0.4.31"}
lz4 = ">=4.3.3"
bokeh = ">=3.1.0"
regions = ">=0.9"
psutil = ">=5.9.8"
matplotlib = ">=3.9.2"
rich = ">=13.0.0"
reproject = "*"
ray = {extras = ["default"], version = "*"}
debugpy = "*"
hip-cargo = { git = "https://github.com/landmanbester/hip-cargo.git", branch = "main" }

[tool.poetry.scripts]
pfb = "pfb.workers.main:cli"
hipfb = "pfb.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## add section for dev component which installs builder and Dockerfiles