[project]
name = "pfb-imaging"
version = "0.0.9"
description = "Radio interferometric imaging suite based on a preconditioned forward-backward approach"
authors = [
    { name = "landmanbester", email = "lbester@sarao.ac.za" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"
]

dependencies = [
    "hip-cargo >= 0.2.0",
]

[project.urls]
Homepage = "https://github.com/ratt-ru/pfb-imaging"

[project.optional-dependencies]
# Full scientific stack
full = [
    "katbeam>=0.1",
    "codex-africanus[dask,scipy,astropy,python-casacore] >= 0.4.4",
    "dask-ms[s3,xarray,zarr]>=0.2.30",
    "distributed>=2026.3.0",  # still need this for degrid command
    "reproject",
    "ray[default]>=2.54.0",
    "scikit-image>=0.24.0",
    "PyWavelets>=1.7.0",
    "numexpr>=2.10.1",
    "ducc0>=0.35.0",
    "sympy>=1.9",
    "tbb>=2021.13.1",
    "jax[cpu]>=0.4.31",
    "lz4>=4.3.3",
    "bokeh>=3.1.0",
    "regions>=0.9",
    "psutil>=5.9.8",
    "matplotlib>=3.9.2",
    "pydantic>=2",
    "omegaconf>=2.3",
    "pillow>=12.2.0",
    "meerkat-beams[full] @ git+https://github.com/landmanbester/meerkat-beams.git@dev001",
]

[project.scripts]
pfb = "pfb_imaging.cli:app"


[build-system]
requires = ["uv_build>=0.8.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pfb_imaging"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more time to run",
]

[dependency-groups]
dev = [
    "tbump>=6.11.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.0.0",
    "ipdb",
]
test = [
    "pytest>=9.0.3",
]
